crates/hats-tui/tests/snapshots/integration_snapshots__footer_with_search.snap
---
source: crates/hats-tui/tests/integration_snapshots.rs
expression: harness.render_footer()
---
──────────────────────────────────────────────────────────────────────────────── Search: error 1/2
